--- a/package.json
+++ b/package.json
@@ -1,6 +1,4 @@
-{
-  "foo": "bar"
-}
-[
-  "baz"
-]
+[{"results":[{"oldID":5,"oldMain":"News papers"}]},
+{"results":[{"oldID":3,"oldMain":"Construction"}]},
+{"results":[{"oldID":2,"oldMain":"Banking Files"}]},
+{"results":[{"oldID":1,"oldMain":"Technologies"}]}]
